# evolution-tray

./: README.md  meson_options.txt
src/: meson.build  properties.c  sn.c  sn.h  tray.c  tray.h
